# even-more-itertools

./: README.md  pyproject.toml
even_more_itertools/: __init__.py
tests/: test_even_more_itertools.py
